# Silk

./: .gitattributes  .gitignore  Cargo.toml  README.md  test_mod.rs  test_return.rs
.github/: copilot-instructions.md
crates/silk-ast/: Cargo.toml
crates/silk-ast/src/: expr.rs  lib.rs  pattern.rs  stmt.rs  types.rs
crates/silk-cli/: Cargo.toml
crates/silk-cli/src/: main.rs
crates/silk-compiler/: Cargo.toml
crates/silk-compiler/src/: lib.rs
crates/silk-lexer/: Cargo.toml
crates/silk-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
crates/silk-lexer/tests/: test_inline_comments.rs  test_lexer.rs
crates/silk-parser/: Cargo.toml
crates/silk-parser/src/: error.rs  expr.rs  lib.rs  stmt.rs
crates/silk-parser/tests/: test_ann_assign.rs  test_control_flow_parsing.rs  test_lambda_defaults.rs  test_parser.rs
crates/silk-semantic/: Cargo.toml
crates/silk-semantic/src/: analyzer.rs  analyzer.rs.backup  control_flow.rs  error.rs  lib.rs  scope.rs  symbol_table.rs  types.rs
crates/silk-semantic/tests/: test_advanced_type_checking.rs  test_analyzer.rs  test_ann_assign.rs  test_assignment_type_checking.rs  test_bare_raise_divergence.rs  test_binary_operation_validation.rs  test_binary_operations.rs  test_call_type_inference.rs  test_collection_operations.rs  test_collection_types.rs  test_complex_exception_patterns.rs  test_complex_return_patterns.rs  test_comprehension_control_flow.rs  test_comprehension_type_inference.rs  test_conditional_initialization.rs  test_conditional_reachability.rs  test_conditional_try_except_returns.rs  test_control_flow_errors.rs  test_control_flow_integration.rs  test_decorator_tracking.rs  test_decorators_bases.rs  test_dict_type_inference.rs  test_forward_references.rs  test_function_call_type_checking.rs  test_function_parameter_initialization.rs  test_function_types.rs  test_global_nonlocal.rs  test_lambda_defaults.rs  test_list_type_inference.rs  test_loop_reachability.rs  (+19 more)
docs/: ANALYSIS_2025-12-08.md  ARCHITECTURE.md  CHANGELOG.md  KNOWN_LIMITATIONS.md  STEPS.md  SYNTAX.md  TODO.md
examples/: byte_raw_strings.silk  byte_strings.silk  decorators.silk  dicts_and_sets.silk  ellipsis.silk  fstrings.silk  function_params.silk  hello.silk  keyword_args.silk  lambda.silk  notimplemented.silk  number_formats.silk  raw_strings.silk  slices.silk  ternary.silk  tuples.silk  walrus_operator.silk
