[workspace]
members = [
    "crates/silk-ast",
    "crates/silk-cli",
    "crates/silk-compiler",
    "crates/silk-lexer",
    "crates/silk-parser",
    "crates/silk-semantic",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Silk Contributors"]
license = "MIT"
repository = "https://github.com/juliuspleunes4/silk"

[workspace.dependencies]
# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
pretty_assertions = "1.4"
